# ProgramAT-opensource

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPILOT_SETUP_PROMPT.md  MAINTAINERS.md  README.md
.github/: pull_request_template.md
.github/workflows/: auto-write-access.yml  check-codebase.yml  check-maintainer-approval.yml  check-tool.yml  claude-assignment  claude-assignment.yml
ProgramATApp/: IssueSelector.tsx  ModelPickerScreen.tsx  ModelPreference.ts  ReviewPane.tsx  Settings.tsx  TabNavigator.tsx  ToolRunner.tsx  WebSocketService.ts  config.ts  package-lock.json  package.json
ProgramATApp/android/app/src/main/: AndroidManifest.xml
ProgramATApp/ios/: Podfile
ProgramATApp/patches/: @react-native-voice+voice+3.2.4.patch  react-native-tts+4.1.1.patch
backend/: .env.example  pyproject.toml  stream_server.py
